# GameGain

./: .gitignore  CMakeLists.txt  README.md  log.md
JucePart/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
WwisePart/: CMakeLists.txt  GameGainConfig.h  PremakePlugin.lua  additional_artifacts.json  bundle_template.json
WwisePart/FactoryAssets/: Manifest.xml
WwisePart/SoundEnginePlugin/: GameGainFX.cpp  GameGainFX.h  GameGainFXFactory.h  GameGainFXParams.cpp  GameGainFXParams.h  GameGainFXShared.cpp
WwisePart/WwisePlugin/: GameGain.def  GameGain.xml  GameGainPlugin.cpp  GameGainPlugin.h
WwisePart/WwisePlugin/Win32/: GameGainPluginGUI.cpp  GameGainPluginGUI.h
